syntax = "proto3";

package pb;

import "token/token.proto";

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/token";

message GetTokenByIDRequest {
    int64 id = 1;
}

message GetTokenByIDResponse {
    Token token = 1;
}